--- a/index.html
+++ b/index.html
@@ -15,6 +15,62 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="login">
+      <img
+        src="./pexels-lucas-fonseca-2239655.jpg"
+        alt="login image"
+        class="login__img"
+      />
+
+      <form action="" class="login__form">
+        <h1 class="login__title">Login</h1>
+        <div class="login__content">
+          <div class="login__box">
+            <i class="ri-user-3-line login__icon"></i>
+
+            <div class="login__box-input">
+              <input
+                type="email"
+                required
+                class="login__input"
+                placeholder=" "
+              />
+              <label for="" class="login__label">Email</label>
+            </div>
+          </div>
+
+          <div class="login__box">
+            <i class="ri-lock-2-line login__icon"></i>
+
+            <div class="login__box-input">
+              <input
+                type="password"
+                required
+                class="login__input"
+                placeholder=" "
+                id="login-pass"
+              />
+              <label for="" class="login__label">password</label>
+              <i class="ri-eye-off-line login__eye" id="login-eye"></i>
+            </div>
+          </div>
+        </div>
+
+        <div class="login__check">
+          <div class="login__check-group">
+            <input type="checkbox" class="login__check-input" />
+            <label for="" class="login__check-label">Remember me</label>
+          </div>
+
+          <a href="#" class="login__forgot">Forgot password</a>
+        </div>
+        <button class="login__button">Login</button>
+
+        <p class="login__register">
+          Don't have an account? <a href="#">Register</a>
+        </p>
+      </form>
+    </div>
     <!-- JavaScript file -->
     <script src="main.js"></script>
   </body>
